@@ -324,7 +324,8 @@ BA 105- [libpari] groupelts_conj_set, group_subgroup_is_faithful
    108- [libpari] galoismatrixapply
 BA 109- new GP function permgroups
 BA 110- [libpari] FpX_FpXV_multirem, FpXV_chinese
-BA 111 galoisinit: support for group (3x3):4 (GAP4(36,9))
+BA 111- galoisinit: support for group (3x3):4 (GAP4(36,9))
+BA 112- [libpari] minim_zm
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
